--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "prettier": "^2.8.1",
     "replugged": "^4.2.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "uwuifier": "^4.0.5"
   }
 }
